# cinii-topic-linking

./: README.md  config.toml  main.ipynb  pyproject.toml
data/bucket_clusters/: all_lang_bucket_1.txt  all_lang_bucket_2.txt  en_bucket_1.txt  en_bucket_2.txt  jp_bucket_2.txt
data/cache/: articles_en.jsonl  en_articles.pkl  keyword2field.json
data/cinii_topics_benchmark/: article_labels.csv  oecd_fos_2007.ttl  oecd_fos_2007_no_desc.ttl
data/minhash/: minhashes.pkl
src/: create_labels_cli.py  create_minhashes.py  extra.ipynb  generate_tokens.py  parse_data_into_df.py
src/evaluation/: __init__.py  metrics.py
src/indexes/: __init__.py  hnsw.py  lsh.py
src/parser/: __init__.py  parse_rdf_data_en_jp.py
src/preprocess/: __init__.py  extract_keywords.py  tokenize.py
